--- a/serverless.yml
+++ b/serverless.yml
@@ -19,25 +19,19 @@ functions:
           type: dynamodb
           arn:
             Fn::GetAtt:
-              - TransaccionesTable
+              - TABLA-TRANSACCIONES
               - StreamArn
       - stream:
           type: dynamodb
           arn:
             Fn::GetAtt:
-              - PagosTable
+              - TABLA-PAGOS
               - StreamArn
       - stream:
           type: dynamodb
           arn:
             Fn::GetAtt:
-              - PrestamosTable
-              - StreamArn
-      - stream:
-          type: dynamodb
-          arn:
-            Fn::GetAtt:
-              - SolicitudesTable
+              - TABLA-PRESTAMOS
               - StreamArn
 
   listarMovimientos:
