--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ functions:
           type: dynamodb
           arn:
             Fn::GetAtt:
-              - TABLA-TRANSACCIONES
+              - TABLA-TRANSACCION
               - StreamArn
       - stream:
           type: dynamodb
